# Week_04_EmbeddedAI-Sensors

./: .gitignore  README.md
day01_timing_loops/: Makefile  README.md  fixed_rate_loop  fixed_rate_loop.cpp  jitter_measure  jitter_measure.cpp
day02_sensor_pipeline/: CMakeLists.txt  README.md  main.cpp
day02_sensor_pipeline/include/: FakeImuSensor.hpp  FakeThermoSensor.hpp  ISensor.hpp  RingBuffer.hpp  SensorManager.hpp  SensorTypes.hpp
day02_sensor_pipeline/src/: FakeImuSensor.cpp  FakeThermoSensor.cpp  SensorManager.cpp
day03_simple_inference/: CMakeLists.txt  main.cpp
day03_simple_inference/include/: FeatureExtractor.hpp  InferenceTypes.hpp  ThresholdDetector.hpp
day03_simple_inference/src/: FeatureExtractor.cpp  ThresholdDetector.cpp
day04_memory_constraints/: CMakeLists.txt  README.md  main.cpp
day04_memory_constraints/include/: DummyModel.hpp  IModel.hpp  ModelIO.hpp  PostProcessor.hpp  Quantizer.hpp
day04_memory_constraints/src/: DummyModel.cpp  Quantizer.cpp
